--- a/static/jade/talks/index.jade
+++ b/static/jade/talks/index.jade
@@ -42,7 +42,7 @@ block viewport
       h2.title Registration #[small 8:00]
       .talk-description
         p.
-          Grab your lanyard, swag bag and cofee. #[br]
+          Grab your lanyard, swag bag and coffee. #[br]
           Meet our sponsors and get ready for a day full of awesome talks!
       
       .commit.empty.first
@@ -53,7 +53,7 @@ block viewport
       .talk-description
         p.
           Welcome to the first #[strong PyCon CZ]. #[br]
-          Applause, introduction, jokes and meanwhile we lock the main doors…
+          Applause, introduction, jokes and meanwhile we lock the main door…
       
       .commit.empty
         .dot
@@ -108,8 +108,8 @@ block viewport
     h2.visible-xs-block Talks
     p.visible-xs-block.
       Two parallel branches of talks are going to be held in two rooms: D105 and
-      D0206. #[strong Master branch] in D105 will be about general topics,
-      while #[strong Practical branch] in D0206 will present more specific ones.
+      D0206. The #[strong Master branch] in D105 will be about general topics,
+      while the #[strong Practical branch] in D0206 will present more specific ones.
     
     //-  Iterate over speakers object (loaded in gulpfile from data/speakers.json)
     //-  and render mixin talk() (see above)
@@ -128,7 +128,7 @@ block viewport
         h2 Lightning talks #[small 19:00]
       .talk-description
         p.
-          The is only one rule of lighning talks: #[br]
+          There is only one rule of lightning talks: #[br]
           5 mins and hard cut. Get on stage and share your experience!
       
       .commit.empty
@@ -140,8 +140,8 @@ block viewport
       .talk-description
         p.
           The first day of PyCon CZ is over.
-          Wrap it up and enjoy evening party.
-          See you tomorrow at sprint venue!
+          Wrap it up and enjoy the evening party.
+          See you tomorrow at the sprint venue!
       
       .commit.empty.last
         .dot
@@ -150,7 +150,7 @@ block viewport
     h2 The venue
     
     p.lead.
-      The conference is going to be held in Brno University of Technology.
+      The conference is going to be held at Brno University of Technology.
 
   .map
     address
