--- a/static/jade/workshops/index.jade
+++ b/static/jade/workshops/index.jade
@@ -38,12 +38,12 @@ block viewport
     h2 Breakfast
     p.
       Good morning, everyone!
-      Let's start with something pleasant. Join us for a delicous breakfast before the coding madness begins.
+      Let's start with something pleasant. Join us for delicous breakfast before the coding madness begins.
     
     h2 Workshops
     p.
       There will be six workshops in 3 rooms. One block of
-      workshops before lunch, and one after.
+      workshops before lunch and one after it.
       
     p.
       Please bring a laptop with a working Python interpreter and
@@ -57,16 +57,16 @@ block viewport
       
     h2 Sprints
     p.
-      Along workshops listed above, there's going to be ongoing hacking &amp;
-      conding atmosphere. If you don't have your project you want to work on
+      Along workshops listed above, there's going to be an ongoing hacking &amp;
+      coding atmosphere. If you don't have your project you want to work on
       with other developers, you can join some of our pre-annonunced sprints:
       
     h3 Python 3 Porting
     p.
-      Make your project Python 3 compatible or help a project you like!
-      Experienced porters can help you on your way, with guidance on porting
+      Make your project Python 3 compatible or help a project that you like!
+      Experienced porters can help you on your way, with guidance through porting
       strategies, best practices, libraries and automation. They can even
-      give you advices how to convince management/upstream that supporting
+      give you advice how to convince the management/upstream that supporting
       Python 3 is a good idea.
 
     h3 Your Sprint Here
@@ -75,7 +75,7 @@ block viewport
 
     h2 Closing
     p.
-      It was a loong weekend and it's time to go home. #[br]
+      It was a looong weekend and it's time to go home. #[br]
       The first PyCon CZ is over. See you next year!
 
     hr
