--- a/static/jade/talks/index.jade
+++ b/static/jade/talks/index.jade
@@ -79,7 +79,7 @@ block viewport
     .event-full
       h2.title.russell Keynote #2 #[br] The secret sauce behind #[br] Open Source #[small 10:00]
       .talk-description
-        .speaker Russell-Keith Maggee
+        .speaker Russell-Keith Magee
         p.
           Dr Russell Keith-Magee is a 9 year veteran of the Django core team,
           and President of the DSF.
@@ -91,7 +91,7 @@ block viewport
       .commit
         img.avatar(
           src=avatar("russell_keith_magee.png"),
-          alt='Photo of Russel Keith-Magee'
+          alt='Photo of Russell Keith-Magee'
         )
     
     .branch-description
