--- a/static/jade/workshops/index.jade
+++ b/static/jade/workshops/index.jade
@@ -38,7 +38,7 @@ block viewport
     h2 Breakfast
     p.
       Good morning, everyone!
-      Let's start with something pleasant. Join us for delicous breakfast before the coding madness begins.
+      Let's start with something pleasant. Join us for delicious breakfast before the coding madness begins.
     
     h2 Workshops
     p.
@@ -59,7 +59,7 @@ block viewport
     p.
       Along workshops listed above, there's going to be an ongoing hacking &amp;
       coding atmosphere. If you don't have your project you want to work on
-      with other developers, you can join some of our pre-annonunced sprints:
+      with other developers, you can join some of our pre-announced sprints:
       
     h3 Python 3 Porting
     p.
