--- a/static/jade/talks/index.jade
+++ b/static/jade/talks/index.jade
@@ -59,7 +59,7 @@ block viewport
         .dot
     
     .event-full
-      h2.title.amber Keynote #1 #[br] Python 3 porting of Twisted #[small 9:00]
+      h2.title.amber Keynote #1 #[br] The future of Twisted #[small 9:00]
       .talk-description
         .speaker Amber Brown
         p.
