Added info about accommodation.

--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -24,7 +24,7 @@ footer.site-footer
             li
               a(href=pageUrl("getting-here/#travelling")) Travelling
             li
-              //- a(href=pageUrl("getting-here/#directions")) Accommodation
+              a(href=pageUrl("getting-here/#accommodation")) Accommodation
 
         li.section
           a.nav-title(href=pageUrl("talks/")) Talks
