--- a/static/jade/getting-here/index.jade
+++ b/static/jade/getting-here/index.jade
@@ -13,6 +13,7 @@ block viewport
       bought your #[a(href=pageUrl("about/tickets.html")) ticket] and now
       you're planning your trip to the lovely village called Brno.
     
+    a.anchor(id="travelling")
     h2 Travelling
     
     p.
@@ -58,3 +59,61 @@ block viewport
       have several #[a(href="https://www.google.cz/maps/dir/Vienna,+Austria/Brno/@48.6934015,16.057494,9z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x476d079e5136ca9f:0xfdc2e58a51a25b46!2m2!1d16.3738189!2d48.2081743!1m5!1m1!1s0x4712943ac03f5111:0x400af0f6614b1b0!2m2!1d16.6068371!2d49.1950602!3e0") options].
       The shortest path is via Poysdorf and Mikulov, but
       you can also go to Reinthal, Břeclav and then connect to the highway #[strong D2].
+
+    a.anchor(id="accommodation")
+    h2 Accommodation
+    
+    p.
+      Saturday and Sunday venues are a bit far from each other. The good news
+      is that Brno is small. Although it's the biggest city in Czech Republic
+      (Prague isn't a city, but a region), you can travel from one end to another
+      in less than one hour. From Saturday venue it's only 20mins to city center
+      and Sunday venue is in walking distance from city center.
+    
+    h3 Affordable hotels
+    
+    p.
+      We don't have any special deals with local hotels unfortunatelly because
+      we didnt't know in advance how many attendees will stay in which hotel.
+    
+    p.
+      The following two hotels are recommended by fellow conference DevConf.
+      
+    h4 #[a(href="http://www.brno-hotel-avanti.eu") AVANTI #[sup ****]]
+    
+    p.
+      The hotel is close to the beautiful park and located between both venus.
+      Very close to city center. It provides a lot of opportunities for
+      relaxation (jacuzzi - with pressure and bubble massage, Finnish sauna and
+      aroma sauna, Scottish shower, solar meadow, reflexology zone,
+      heated benches and floors). 
+    
+    p.
+      Prices (breakfast included):
+      
+      ul
+        li 1.900 CZK (~78 EUR) per night for a double bed room
+        li 1.700 CZK (~70 EUR) per night for a single bed room 
+
+    h4 #[a(href="http://www.a-sporthotel.cz/en/") A-SPORT #[sup ***]]
+    
+    p.
+      This hotel is very close to Satuday venue and located about 20mins from
+      city center. Very affordable option if you don't require anything fancy.
+    
+    p.
+      Prices (breakfast included):
+      
+      ul
+        li 1.330 CZK (~49 EUR) per night for a double bed room
+        li 990 CZK (~37 EUR) per night for a single bed room
+    
+    h3 Enjoyable hotels
+    
+    p.
+      If you really want to enjoy your stay in Brno, you might be looking for
+      a nice hotel in a city center. There are two that we could recommend:
+      
+      ul
+        li #[a(href="http://www.continentalbrno.cz/en/introduction.html") Continental #[sup ****]]
+        li #[a(href="http://www.grandezzahotel.cz/index.php?Lang_set=1") Grandezza #[sup ****]]
