--- a/static/jade/getting-here/index.jade
+++ b/static/jade/getting-here/index.jade
@@ -65,7 +65,7 @@ block viewport
     
     p.
       Saturday and Sunday venues are a bit far from each other. The good news
-      is that Brno is small. Although it's the biggest city in Czech Republic
+      is that Brno is small. Although it's the biggest city in the Czech Republic
       (Prague isn't a city, but a region), you can travel from one end to another
       in less than one hour. From Saturday venue it's only 20mins to city center
       and Sunday venue is in walking distance from city center.
@@ -91,6 +91,7 @@ block viewport
     p.
       Prices (breakfast included):
       
+    p
       ul
         li 1.900 CZK (~78 EUR) per night for a double bed room
         li 1.700 CZK (~70 EUR) per night for a single bed room 
@@ -104,6 +105,7 @@ block viewport
     p.
       Prices (breakfast included):
       
+    p
       ul
         li 1.330 CZK (~49 EUR) per night for a double bed room
         li 990 CZK (~37 EUR) per night for a single bed room
@@ -113,7 +115,8 @@ block viewport
     p.
       If you really want to enjoy your stay in Brno, you might be looking for
       a nice hotel in a city center. There are two that we could recommend:
-      
+    
+    p
       ul
         li #[a(href="http://www.continentalbrno.cz/en/introduction.html") Continental #[sup ****]]
         li #[a(href="http://www.grandezzahotel.cz/index.php?Lang_set=1") Grandezza #[sup ****]]
