--- a/static/jade/getting-here/index.jade
+++ b/static/jade/getting-here/index.jade
@@ -67,14 +67,14 @@ block viewport
       Saturday and Sunday venues are a bit far from each other. The good news
       is that Brno is small. Although it's the biggest city in the Czech Republic
       (Prague isn't a city, but a region), you can travel from one end to another
-      in less than one hour. From Saturday venue it's only 20mins to city center
-      and Sunday venue is in walking distance from city center.
+      in less than one hour. From the Saturday venue it's only 20 mins to the city centre,
+      and the Sunday venue is in walking distance from the city centre.
     
     h3 Affordable hotels
     
     p.
-      We don't have any special deals with local hotels unfortunatelly because
-      we didnt't know in advance how many attendees will stay in which hotel.
+      Unfortunately, we don't have any special deals with local hotels because
+      we could not ensure any specific number of bookings in each hotel.
     
     p.
       The following two hotels are recommended by fellow conference DevConf.
@@ -82,8 +82,8 @@ block viewport
     h4 #[a(href="http://www.brno-hotel-avanti.eu") AVANTI #[sup ****]]
     
     p.
-      The hotel is close to the beautiful park and located between both venus.
-      Very close to city center. It provides a lot of opportunities for
+      The hotel is located between the venues and lies near a beautiful park.
+      Very close to the city centre. It provides a lot of opportunities for
       relaxation (jacuzzi - with pressure and bubble massage, Finnish sauna and
       aroma sauna, Scottish shower, solar meadow, reflexology zone,
       heated benches and floors). 
@@ -93,28 +93,28 @@ block viewport
       
     p
       ul
-        li 1.900 CZK (~78 EUR) per night for a double bed room
-        li 1.700 CZK (~70 EUR) per night for a single bed room 
+        li 1.900 CZK (~78 EUR) per night for a double bedroom
+        li 1.700 CZK (~70 EUR) per night for a single bedroom 
 
     h4 #[a(href="http://www.a-sporthotel.cz/en/") A-SPORT #[sup ***]]
     
     p.
-      This hotel is very close to Satuday venue and located about 20mins from
-      city center. Very affordable option if you don't require anything fancy.
+      This hotel is very close to the Saturday venue and located about 20 mins from
+      the city centre. A very affordable option if you don't require anything fancy.
     
     p.
       Prices (breakfast included):
       
     p
       ul
-        li 1.330 CZK (~49 EUR) per night for a double bed room
-        li 990 CZK (~37 EUR) per night for a single bed room
+        li 1.330 CZK (~49 EUR) per night for a double bedroom
+        li 990 CZK (~37 EUR) per night for a single bedroom
     
     h3 Enjoyable hotels
     
     p.
       If you really want to enjoy your stay in Brno, you might be looking for
-      a nice hotel in a city center. There are two that we could recommend:
+      a nice hotel in the city centre. There are two that we could recommend:
     
     p
       ul
