Budget accommodation and guide.

--- a/static/jade/getting-here/index.jade
+++ b/static/jade/getting-here/index.jade
@@ -7,36 +7,36 @@ block vars
 block viewport
   .container
     h1 Getting here
-    
+
     p.lead.
       You. Are. Awesome. You want to attend the first PyCon CZ, you've just
       bought your #[a(href=pageUrl("about/tickets.html")) ticket] and now
       you're planning your trip to the lovely village called Brno.
-    
+
     a.anchor(id="travelling")
     h2 Travelling
-    
+
     p.
       Have we already told you that Brno is situated in the heart of Europe?
       That's right. Brno is the centroid of the whole continent, the cosmopolis
       of culture, technology, education, and mostly… jokes.
-    
+
     h3 By plane
-    
+
     p.
       If you're travelling by plane, please check out #[a(href="https://skypicker.com") SkyPicker].
       It's a search engine for cheap flights. You need to get as close to Brno
       as possible. Possible airports are:
-      
+
     ul
       li #[strong Prague] (2.5 hours from Brno)
       li #[strong Vienna] (2 hours from Brno)
       li #[strong Bratislava] (2 hours from Brno)
       li #[strong Budapest] (4.5 hours from Brno)
       li and of course #[strong Brno], but it's a very small airport.
-    
+
     h3 By train or bus
-    
+
     p.
       We love trains! The most ecological means of transport. The Czech Republic
       has  a very dense railway network. Buses depart very often to  and from
@@ -49,9 +49,9 @@ block viewport
       when looking for a train or bus. If the page loads in Czech, just find
         "English" on the page. It is localized, but uses some kind of
         an obscure mechanism.
-    
+
     h3 By car
-    
+
     p.
       As we mentioned before, Brno is halfway between Prague and Vienna. It
       means that you can use highway #[strong D1] when travelling from Prague (enjoy it,
@@ -60,63 +60,117 @@ block viewport
       The shortest path is via Poysdorf and Mikulov, but
       you can also go to Reinthal, Břeclav and then connect to the highway #[strong D2].
 
+    a.anchor(id="guide")
+    h2 Guide
+
+    p.
+      If you are about to stay in Brno for couple of days and the conference
+      isn't the only thing you would like to experience, or if you go with your
+      family and you would like to provide them with alternative program, we
+      suggest you to check out #[a(http://brnonow.com/) #[strong Kašpárek's Guide to Brno]] (it has also #[a(http://poznejbrno.cz/) Czech version]).
+
+    p.
+      There is also #[a(https://www.use-it.travel/cities/detail/brno/) USE-IT map for Brno]. If you don't know USE-IT, it's #[em no-nonsense tourist info for
+      young people made by young locals, not commercial, free, and up-to-date].
+
     a.anchor(id="accommodation")
     h2 Accommodation
-    
+
     p.
       Saturday and Sunday venues are a bit far from each other. The good news
       is that Brno is small. Although it's the biggest city in the Czech Republic
       (Prague isn't a city, but a region), you can travel from one end to another
-      in less than one hour. From the Saturday venue it's only 20 mins to the city centre,
-      and the Sunday venue is in walking distance from the city centre.
-    
-    h3 Affordable hotels
-    
+      in less than one hour. From the Saturday venue it's only 20 mins to the city centre, and the Sunday venue is in walking distance from the city centre.
+
+    h3 Enjoyable hotels ($$$)
+
+    p.
+      If you really want to enjoy your stay in Brno, you might be looking for
+      a nice hotel in the city centre. There are two that we could recommend:
+
+    p
+      ul
+        li #[a(href="http://www.continentalbrno.cz/en/introduction.html") Continental #[sup ****]]
+        li #[a(href="http://www.grandezzahotel.cz/index.php?Lang_set=1") Grandezza #[sup ****]]
+
+    h3 Affordable hotels ($$)
+
     p.
       Unfortunately, we don't have any special deals with local hotels because
       we could not ensure any specific number of bookings in each hotel.
-    
+
     p.
       The following two hotels are recommended by fellow conference DevConf.
-      
+
     h4 #[a(href="http://www.brno-hotel-avanti.eu") AVANTI #[sup ****]]
-    
+
     p.
       The hotel is located between the venues and lies near a beautiful park.
       Very close to the city centre. It provides a lot of opportunities for
       relaxation (jacuzzi - with pressure and bubble massage, Finnish sauna and
       aroma sauna, Scottish shower, solar meadow, reflexology zone,
-      heated benches and floors). 
-    
+      heated benches and floors).
+
     p.
       Prices (breakfast included):
-      
+
     p
       ul
         li 1.900 CZK (~78 EUR) per night for a double bedroom
-        li 1.700 CZK (~70 EUR) per night for a single bedroom 
+        li 1.700 CZK (~70 EUR) per night for a single bedroom
 
     h4 #[a(href="http://www.a-sporthotel.cz/en/") A-SPORT #[sup ***]]
-    
+
     p.
       This hotel is very close to the Saturday venue and located about 20 mins from
       the city centre. A very affordable option if you don't require anything fancy.
-    
+
     p.
       Prices (breakfast included):
-      
+
     p
       ul
         li 1.330 CZK (~49 EUR) per night for a double bedroom
         li 990 CZK (~37 EUR) per night for a single bedroom
-    
-    h3 Enjoyable hotels
-    
+
+    h3 Budget ($)
+
     p.
-      If you really want to enjoy your stay in Brno, you might be looking for
-      a nice hotel in the city centre. There are two that we could recommend:
-    
+      Brno isn't called a student city for no reason. It has 6 public
+      and 9 private universities. Due to this fact there are many student
+      dormitories and hostels, which offer #[em ad hoc] accommodation
+      for even more than very affordable prices.
+
+    h4 #[a(href="http://www.hotel-palacky.cz/en/index.aspx") Hotel Palacký #[sup ***]]
+
+    p.
+      This hotel is basically a part of student dormitory and it's not very far
+      from the Saturday venue. It's located in rather large student campus
+      complex at the edge of the enclosing part of the city, but you can get
+      easily to any place you wish by public transport, usually under 20 minutes.
+
+    p.
+      Prices:
+
     p
       ul
-        li #[a(href="http://www.continentalbrno.cz/en/introduction.html") Continental #[sup ****]]
-        li #[a(href="http://www.grandezzahotel.cz/index.php?Lang_set=1") Grandezza #[sup ****]]
+        li 350 CZK (~13 EUR) per night per each person in double room
+        li 390 CZK (~15 EUR) per night per 1 person in double room
+
+    h4 #[a(href="http://www.hostelfleda.com/") Hostel Fléda]
+
+    p.
+      The hostel is in the same building as the most famous and largest club
+      in Brno, Fléda, lives. Fléda is a pulsing place, low-cost, but cozy,
+      with all the facilities a backpacker needs, and many opportunities
+      to have fun around. It's half way between the Saturday and Sunday venues
+      and in walkable distance from the city center.
+
+    p.
+      Prices:
+
+    p
+      ul
+        li 800 CZK (~29 EUR) per night per double room with either twin or double bed
+        li 350 CZK (~13 EUR) per night per standard dormitory with bunk beds
+        li 200 CZK (~8 EUR) per night per budget walkthrough dormitory with bunk beds
