--- a/static/jade/getting-here/index.jade
+++ b/static/jade/getting-here/index.jade
@@ -67,10 +67,10 @@ block viewport
       If you are about to stay in Brno for couple of days and the conference
       isn't the only thing you would like to experience, or if you go with your
       family and you would like to provide them with alternative program, we
-      suggest you to check out #[a(http://brnonow.com/) #[strong Kašpárek's Guide to Brno]] (it has also #[a(http://poznejbrno.cz/) Czech version]).
+      suggest you to check out #[a(href=http://brnonow.com/) #[strong Kašpárek's Guide to Brno]] (it has also #[a(href=http://poznejbrno.cz/) Czech version]).
 
     p.
-      There is also #[a(https://www.use-it.travel/cities/detail/brno/) USE-IT map for Brno]. If you don't know USE-IT, it's #[em no-nonsense tourist info for
+      There is also #[a(href=https://www.use-it.travel/cities/detail/brno/) USE-IT map for Brno]. If you don't know USE-IT, it's #[em no-nonsense tourist info for
       young people made by young locals, not commercial, free, and up-to-date].
 
     a.anchor(id="accommodation")
