--- a/static/jade/getting-here/index.jade
+++ b/static/jade/getting-here/index.jade
@@ -100,7 +100,7 @@ block viewport
       we could not ensure any specific number of bookings in each hotel.
 
     p.
-      The following two hotels are recommended by fellow conference DevConf.
+      The following two hotels are recommended by fellow conference #[a(href="http://devconf.cz/") DevConf].
 
     h4 #[a(href="http://www.brno-hotel-avanti.eu") AVANTI #[sup ****]]
 
