--- a/static/jade/getting-here/index.jade
+++ b/static/jade/getting-here/index.jade
@@ -67,11 +67,13 @@ block viewport
       If you are about to stay in Brno for couple of days and the conference
       isn't the only thing you would like to experience, or if you go with your
       family and you would like to provide them with alternative program, we
-      suggest you to check out #[a(href="http://brnonow.com/") #[strong Kašpárek's Guide to Brno]] (it has also #[a(href="http://poznejbrno.cz/") Czech version]).
+      suggest you to check out #[a(href="http://brnonow.com/") #[strong Kašpárek#{"'"}s Guide to Brno]]
+      (it also has a #[a(href="http://poznejbrno.cz/") Czech version]).
 
     p.
-      There is also #[a(href="https://www.use-it.travel/cities/detail/brno/") USE-IT map for Brno]. If you don't know USE-IT, it's #[em no-nonsense tourist info for
-      young people made by young locals, not commercial, free, and up-to-date].
+      There is also the #[a(href="https://www.use-it.travel/cities/detail/brno/") USE-IT map for Brno].
+      If you don't know USE-IT, it's
+      #[em no-nonsense tourist info for young people made by young locals, not commercial, free, and up-to-date].
 
     a.anchor(id="accommodation")
     h2 Accommodation
@@ -80,13 +82,14 @@ block viewport
       Saturday and Sunday venues are a bit far from each other. The good news
       is that Brno is small. Although it's the biggest city in the Czech Republic
       (Prague isn't a city, but a region), you can travel from one end to another
-      in less than one hour. From the Saturday venue it's only 20 mins to the city centre, and the Sunday venue is in walking distance from the city centre.
+      in less than one hour. From the Saturday venue it's only 20 mins to the city centre,
+      and the Sunday venue is in walking distance from the city centre.
 
     h3 Enjoyable hotels ($$$)
 
     p.
       If you really want to enjoy your stay in Brno, you might be looking for
-      a nice hotel in the city centre. There are two that we could recommend:
+      a nice hotel in the city centre. There are two that we can recommend:
 
     p
       ul
@@ -100,7 +103,7 @@ block viewport
       we could not ensure any specific number of bookings in each hotel.
 
     p.
-      The following two hotels are recommended by fellow conference #[a(href="http://devconf.cz/") DevConf].
+      The following two hotels are recommended by our fellow conference #[a(href="http://devconf.cz/") DevConf].
 
     h4 #[a(href="http://www.brno-hotel-avanti.eu") AVANTI #[sup ****]]
 
@@ -136,8 +139,8 @@ block viewport
     h3 Budget ($)
 
     p.
-      Brno isn't called a student city for no reason. It has 6 public
-      and 9 private universities. Due to this fact there are many student
+      Brno is called a student city for a reason. It has 6 public
+      and 9 private universities. Due to this fact, there are many student
       dormitories and hostels, which offer #[em ad hoc] accommodation
       for even more than very affordable prices.
 
@@ -145,23 +148,23 @@ block viewport
 
     p.
       This hotel is basically a part of student dormitory and it's not very far
-      from the Saturday venue. It's located in rather large student campus
+      from the Saturday venue. It's located in a rather large student campus
       complex at the edge of the enclosing part of the city, but you can get
-      easily to any place you wish by public transport, usually under 20 minutes.
+      to any place you wish easily by public transport, usually in under 20 minutes.
 
     p.
       Prices:
 
     p
       ul
-        li 350 CZK (~13 EUR) per night per each person in double room
-        li 390 CZK (~15 EUR) per night per 1 person in double room
+        li 350 CZK (~13 EUR) per night per each person in a double room
+        li 390 CZK (~15 EUR) per night per 1 person in a double room
 
     h4 #[a(href="http://www.hostelfleda.com/") Hostel Fléda]
 
     p.
       The hostel is in the same building as the most famous and largest club
-      in Brno, Fléda, lives. Fléda is a pulsing place, low-cost, but cozy,
+      in Brno, Fléda. Fléda is a pulsing place, low-cost, but cozy,
       with all the facilities a backpacker needs, and many opportunities
       to have fun around. It's half way between the Saturday and Sunday venues
       and in walkable distance from the city center.
@@ -171,6 +174,6 @@ block viewport
 
     p
       ul
-        li 800 CZK (~29 EUR) per night per double room with either twin or double bed
-        li 350 CZK (~13 EUR) per night per standard dormitory with bunk beds
-        li 200 CZK (~8 EUR) per night per budget walkthrough dormitory with bunk beds
+        li 800 CZK (~29 EUR) per night for double room with either twin or double bed
+        li 350 CZK (~13 EUR) per night for standard dormitory with bunk beds
+        li 200 CZK (~8 EUR) per night for budget walkthrough dormitory with bunk beds
