--- a/static/jade/getting-here/index.jade
+++ b/static/jade/getting-here/index.jade
@@ -139,17 +139,17 @@ block viewport
     h3 Budget ($)
 
     p.
-      Brno is called a student city for a reason. It has 6 public
+      Brno is called the student city for a reason. It has 6 public
       and 9 private universities. Due to this fact, there are many student
-      dormitories and hostels, which offer #[em ad hoc] accommodation
-      for even more than very affordable prices.
+      dormitories and hostels which offer #[em ad hoc] accommodation
+      for less than affordable prices.
 
     h4 #[a(href="http://www.hotel-palacky.cz/en/index.aspx") Hotel Palacký #[sup ***]]
 
     p.
-      This hotel is basically a part of student dormitory and it's not very far
+      This hotel is basically part of a student dormitory and it's not very far
       from the Saturday venue. It's located in a rather large student campus
-      complex at the edge of the enclosing part of the city, but you can get
+      complex at the edge of the city, but you can get
       to any place you wish easily by public transport, usually in under 20 minutes.
 
     p.
@@ -157,23 +157,23 @@ block viewport
 
     p
       ul
-        li 350 CZK (~13 EUR) per night per each person in a double room
+        li 350 CZK (~13 EUR) per night per person in a double room
         li 390 CZK (~15 EUR) per night per 1 person in a double room
 
     h4 #[a(href="http://www.hostelfleda.com/") Hostel Fléda]
 
     p.
       The hostel is in the same building as the most famous and largest club
-      in Brno, Fléda. Fléda is a pulsing place, low-cost, but cozy,
+      in Brno, Fléda. Fléda is a pulsing place, low-cost but cozy,
       with all the facilities a backpacker needs, and many opportunities
-      to have fun around. It's half way between the Saturday and Sunday venues
-      and in walkable distance from the city center.
+      to have fun around. It's halfway between the Saturday and Sunday venues
+      and in walkable distance from the city centre.
 
     p.
       Prices:
 
     p
       ul
-        li 800 CZK (~29 EUR) per night for double room with either twin or double bed
-        li 350 CZK (~13 EUR) per night for standard dormitory with bunk beds
-        li 200 CZK (~8 EUR) per night for budget walkthrough dormitory with bunk beds
+        li 800 CZK (~29 EUR) per night for a double room with either twin or double bed
+        li 350 CZK (~13 EUR) per night for a standard dormitory with bunk beds
+        li 200 CZK (~8 EUR) per night for a budget walkthrough dormitory with bunk beds
