Added venue addresses
It's very hard to find venue address, so I added
link to Google Maps bellow each section/day.

--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -30,6 +30,10 @@ block viewport
       .program-item
         h2 Talks
         .date Saturday 14th
+        .venue
+          i.fa.fa-map-marker
+          span.
+            #[a(href="https://www.google.com/maps/place/Faculty+of+Information+Technology+Brno+University+of+Technology,+Bo%C5%BEet%C4%9Bchova+1%2F2,+612+66+Brno-Kr%C3%A1lovo+Pole,+Czech+Republic/@49.226851,16.5945971,17z/data=!3m1!4b1!4m2!3m1!1s0x471294099f6249fb:0x46a6dce891d1b33d") Faculty of Information Technology, Božetěchova 1/2]
         p.
           #[strong One] day, #[strong two] parallel tracks, #[strong two] keynotes
           and #[strong ten] awesome talks. Community, web, hardware, science, devops and more.
@@ -37,6 +41,10 @@ block viewport
       .program-item
         h2 Sprints &amp; workshops
         .date Sunday 15th
+        .venue
+          i.fa.fa-map-marker
+          span.
+            #[a(href="https://www.google.com/maps/place/Impact+Hub+Brno/@49.190373,16.6196553,18z/data=!3m1!4b1!4m2!3m1!1s0x471294f952b22a6b:0x27db29d4d2f43c52") Impact Hub Brno, Cyrilská 7]
         p.
           #[strong Six] workshops in #[strong two] blocks and sprinting all day long. Hack on
           open-source projects together with other Python community members.
