Removed any mentions about ticket sales.

--- a/static/jade/about/tickets.jade
+++ b/static/jade/about/tickets.jade
@@ -4,15 +4,11 @@ block viewport
   .container
     h1 Tickets
 
-    p.lead
-      a.tickets-link(href=ticketsLink) Ticket sales
-      |  are now open. We have rates for individuals, corporate
-      |  attendees and also for students. It's simple: We want you all to
-      |  attend the first year edition of #[strong PyCon CZ].
+    p.lead.
+      Ticket sales are now closed. Looking forward to meet you all at
+      the first year edition of #[strong PyCon CZ].
     
     include ../components/twitter
-
-    tito-widget(event="pyvec/pycon-cz-2015")
 
     h2 What's included in the ticket price
     
