--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -50,10 +50,9 @@ block viewport
           open-source projects together with other Python community members.
     
     .registration
-      h2 Registration is now open
-      p.lead #[a(href=pageUrl("about/tickets.html")) Get your ticket] now and be part of the first PyCon CZ!
-      .tito
-        tito-widget(event="pyvec/pycon-cz-2015")
+      h2 Registration is now closed
+      p.lead.
+        See you all at PyCon CZ 2015!
     
       h2 What people think about PyCon CZ?
       
