Replaced twisto logo.

--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -74,7 +74,7 @@ block viewport
             img(src=pageUrl("/static/images/sponsors/psf.png"))
         .sponsor
           a.sponsor-twisto(href="https://www.twisto.cz")
-            img(src=pageUrl("/static/images/sponsors/twisto.jpg"))
+            img(src=pageUrl("/static/images/sponsors/twisto.png"))
 
       .silver
         h3 Silver sponsors
