Add more workshop requirements, and a new sprint

--- a/static/jade/workshops/index.jade
+++ b/static/jade/workshops/index.jade
@@ -78,6 +78,13 @@ block viewport
       give you advice how to convince the management/upstream that supporting
       Python 3 is a good idea.
 
+    h3 The Docs Sprint
+    p.
+      The Doc-tors will focus mainly on Django, DjangoGirls, or Python
+      documentation, but any open-source project is fair game.
+      Come sprint with us – you can make your first open-source contribution,
+      improve the docs of your successful library, or anything in between!
+
     h3 Your Sprint Here
     p.
       Additional sprints will be announced after lightning talks on Saturday.
