Added Mikey as CoC contact person

--- a/static/jade/about/code-of-conduct.jade
+++ b/static/jade/about/code-of-conduct.jade
@@ -81,6 +81,8 @@ block viewport
       If the matter is especially urgent, please call/contact any of these individuals:
     
     ul
+      li Mikey Ariel at 
+        a(href="tel:+420702131141") +420 702 131 141
       li Tomáš Ehrlich at 
         a(href="tel:+420608219889") +420 608 219 889
         
