Published info about PyConTest.

--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -7,12 +7,10 @@ footer.site-footer
           ul
             li
               a(href=pageUrl("about/team.html")) Team
-            //- li
-            //-   a(href="/") Event
             li
               a(href=pageUrl("about/tickets.html")) #[strong Tickets]
-            //- li
-            //-   a(href="/") Speakers
+            li
+              a(href=pageUrl("about/pycontest.html")) #PyConTest
             li
               a(href=pageUrl("about/sponsorship.html")) Sponsorship
             li
