--- a/static/jade/components/navbar.jade
+++ b/static/jade/components/navbar.jade
@@ -9,8 +9,11 @@ header#top
       li.getting-here(class=activePage == "getting-here" ? "active" : "")
         a(href=pageUrl("getting-here/")) Getting here
       li.tickets
-        a(href=pageUrl("about/tickets.html"))
-          | Tickets
+        a(href=pageUrl("about/pycontest.html"))
+          | #PyConTest
+      //- li.tickets
+      //-   a(href=pageUrl("about/tickets.html"))
+      //-     | Tickets
       li.talks(class=activePage == "talks" ? "active" : "")
         a(href=pageUrl("talks/"))
           | Talks
