--- a/static/jade/about/pycontest.jade
+++ b/static/jade/about/pycontest.jade
@@ -12,8 +12,9 @@ block viewport
         img.col-sm-6(src=pageUrl("/static/images/pycontest/prizes-2.jpg"), alt="#PyConTest prizes")
 
     ul
-        li 1st challenge  10:00 CET
-        li 2nd challenge 11:00 CET
+        li 
+            a(href="https://drive.google.com/folderview?id=0B76bfeqN4RF2dU03XzI4SFJKZUk&usp=sharing") 1st challenge  10:00 CET
+        li 2nd challenge: 11:00 CET
         li 3rd challenge: 12:00 CET
         li 4th challenge: 13:00 CET
         li 5th challenge: 14:00 CET
@@ -49,9 +50,9 @@ block viewport
     p.
         To be eligible for winning you must fullfil the following conditions:
         
-        ol
-            li you are a registered visitor of pycon.cz conference
-            li you must solve and submit all challenges and they must be correct
+    ol
+        li you are a registered visitor of pycon.cz conference
+        li you must solve and submit all challenges and they must be correct
 
     p.
         Also please note that by submitting your solutions you accept the fact
@@ -60,17 +61,18 @@ block viewport
 
     h2 What can I win?
     
-    p Except for cool job offers you may win the following prizes:
+    p Apart from cool job offers you may win the following prizes:
     
     ul
         li Garmin Fenix 3 Sapphire Performer
         li Nexus 5x Black 32GB
         li Audio-technica ATH-M50x
+        li Kindle Paperwhite 3
 
     h2 How will winners be chosen?
     
     p.
         Winners will be determined by the results of the 5th challenge (don't be afraid, 
         it won't be a 'like'ing race) but bear in mind that you still need to have the first 
-        four challenges submitted and and they all must be correct. Winners will be 
-        announced before start of lightning talks.
+        four challenges submitted and they must all be correct. Winners will be 
+        announced before the lightning talks start.
