--- a/static/jade/about/pycontest.jade
+++ b/static/jade/about/pycontest.jade
@@ -10,11 +10,15 @@ block viewport
     .row
         img.col-sm-6(src=pageUrl("/static/images/pycontest/prizes.jpg"), alt="#PyConTest prizes")
         img.col-sm-6(src=pageUrl("/static/images/pycontest/prizes-2.jpg"), alt="#PyConTest prizes")
+    
+    p.lead.pycontest-email.alert.alert-info.
+      Send all submissions to #[a(href="mailto:pycontestcz@gmail.com") pycontestcz@gmail.com]
 
     ul
         li 
-            a(href="https://drive.google.com/folderview?id=0B76bfeqN4RF2dU03XzI4SFJKZUk&usp=sharing") 1st challenge  10:00 CET
-        li 2nd challenge: 11:00 CET
+          a(href="https://drive.google.com/folderview?id=0B76bfeqN4RF2VTdsay1Scmpac3c&usp=sharing") 1st challenge:  10:00 CET
+        li
+          a(href="https://drive.google.com/folderview?id=0B76bfeqN4RF2eVZNNlpwUDhFLTA&usp=sharing") 2nd challenge: 11:00 CET
         li 3rd challenge: 12:00 CET
         li 4th challenge: 13:00 CET
         li 5th challenge: 14:00 CET
