--- a/static/scss/pyconcz.scss
+++ b/static/scss/pyconcz.scss
@@ -99,3 +99,10 @@ hr {
   border: 0;
   background-color: $brand-primary;
 }
+
+.pycontest-email {
+  color: $brand-secondary;
+  font-size: 36px;
+  text-align: center;
+  font-weight: bold;
+}
